# fibonacci-compressor

./: .gitmodules  CMakeLists.txt  README.md
src/: fibonacci_encoding.hpp  main.cpp  pretty_types.h
